--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "OPNsense API Client",
   "author": "bmdevx",
-  "license": "GNU GPL3",
+  "license": "GPL-3.0",
   "dependencies": {
     "request": "^2.88.2"
   },
@@ -13,6 +13,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bmdevx/node-opnsense.git"
-  }
+    "url": "git+https://github.com/bmdevx/node-opnsense.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bmdevx/node-opnsense/issues"
+  },
+  "homepage": "https://github.com/bmdevx/node-opnsense#readme",
+  "devDependencies": {}
 }
