--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "description": "OPNsense API Client",
   "author": "bmdevx",
-  "license": "GPL-3.0",
+  "license": "GNU GPL3",
   "dependencies": {
     "request": "^2.88.2"
   },
